--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -19,7 +19,7 @@
 		<main>
 			<textarea id="note" data-id="" tabindex="-1">
 			</textarea>
-			<button id="edit"></button>
+			<button id="edit" title="Edit Note"></button>
 		</main>
 	</div>
 	
