--- a/app-source/html/nc-loginflow.html
+++ b/app-source/html/nc-loginflow.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="">
 	<head>
 		<meta charset="utf-8" />
 		<title>Nextcloud Notes Client - Nextcloud Loginflow</title>
