--- a/app-source/html/prefs.html
+++ b/app-source/html/prefs.html
@@ -1,25 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="">
 <head>
 	<meta charset="utf-8">
-	<title>Preferences</title>
+	<title data-i18n="prefs:head.title">Preferences</title>
 	<link rel="stylesheet" type="text/css" href="../css/prefs.min.css" media="all">
 </head>
 <body>
 	<section>
 		<div>
-			<label for="sortby">Sort notes by</label>
+			<label for="sortby" data-i18n="prefs:body.label.sort">Sort notes by</label>
 			<select id="sortby" name="sortby">
-				<option value="modified">Date</option>
-				<option value="title">Title</option>
+				<option value="modified" data-i18n="prefs:body.option.date">Date</option>
+				<option value="title" data-i18n="prefs:body.option.title">Title</option>
 			</select>
 		</div>
 		
 		<div>
-			<label for="orderby">Order notes by</label>
+			<label for="orderby" data-i18n="prefs:body.label.order">Order notes by</label>
 			<select id="orderby" name="orderby">
-				<option value="desc">Descending</option>
-				<option value="asc">Ascending</option>
+				<option value="desc" data-i18n="prefs:body.option.desc">Descending</option>
+				<option value="asc" data-i18n="prefs:body.option.asc">Ascending</option>
 			</select>
 		</div>
 	</section>
@@ -41,24 +41,24 @@
 				<option value="15"></option>
 				<option value="16">A</option>
 			</datalist>
-			<label for="zoom">Default text size</label>
+			<label for="zoom" data-i18n="prefs:body.label.zoom">Default text size</label>
 			<input type="range" list="marks" id="zoom" name="zoom" min="4" max="16" step="1" />
 		</div>
 	</section>
 	
 	<section>
 		<div>
-			<label>Cursor position</label>
+			<label data-i18n="prefs:body.label.cursor">Cursor position</label>
 			
 			<ul>
 				<li>
 					<input type="radio" id="start" name="cursor" value="start">
-					<label for="start">start</label>
+					<label for="start" data-i18n="prefs:body.label.start">start</label>
 				</li>
 				
 				<li>
 					<input type="radio" id="end" name="cursor" value="end">
-					<label for="end">end</label>
+					<label for="end" data-i18n="prefs:body.label.end">end</label>
 				</li>
 			</ul>
 			
@@ -68,7 +68,7 @@
 	
 	<section>
 		<div>
-			<label for="spellcheck">Spellcheck</label>
+			<label for="spellcheck" data-i18n="prefs:body.label.spell">Spellcheck</label>
 			<label class="switch">
 				<input type="checkbox" id="spellcheck" name="spellcheck">
 				<span class="slider"></span>
