--- a/app-source/html/login.html
+++ b/app-source/html/login.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Nextcloud Notes Client - Login</title>
+		<script>
+			require( '../js/theme.min' )
+		</script>
 		<link rel="stylesheet" type="text/css" href="../css/modal.min.css" media="all">
 	</head>
 	
