--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>&nbsp;</title>
+	<script>
+		require( '../js/theme.min' )
+	</script>
 	<link rel="stylesheet" type="text/css" href="../css/app.min.css" media="all">
 </head>
 <body>
