--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -27,8 +27,18 @@
 	</div>
 	
 	<footer>
-		<ul id="categories">
-			<!-- todo(@duncanmid): categories -->
+		<span id="cat-title"></span>
+		
+		<ul id="fixed-categories" class="categories">
+			<li>
+				<button id="cat-all"></button>
+			</li>
+			<li>
+				<button id="cat-none"></button>
+			</li>
+		</ul>
+		
+		<ul id="categories" class="categories">
 		</ul>
 	</footer>
 	<script>
