--- a/app-source/html/prefs.html
+++ b/app-source/html/prefs.html
@@ -83,6 +83,29 @@
 		</div>
 	</section>
 	
+	<section>
+		<div>
+			<label data-i18n="prefs:body.label.theme">Theme</label>
+			
+			<ul>
+				<li>
+					<input type="radio" id="os-theme" name="theme" value="default">
+					<label for="os-theme" data-i18n="prefs:body.option.os">OS default</label>
+				</li>
+				
+				<li>
+					<input type="radio" id="light" name="theme" value="light">
+					<label for="light" data-i18n="prefs:body.option.light">light</label>
+				</li>
+				
+				<li>
+					<input type="radio" id="dark" name="theme" value="dark">
+					<label for="dark" data-i18n="prefs:body.option.dark">dark</label>
+				</li>
+			</ul>
+		</div>
+	</section>
+	
 	<script>
 		require( '../js/prefs.min' )
 	</script>
