--- a/app-source/html/prefs.html
+++ b/app-source/html/prefs.html
@@ -85,6 +85,16 @@
 	
 	<section>
 		<div>
+			<label for="showcats" data-i18n="prefs:body.label.showcats">Display categories</label>
+			<label class="switch">
+				<input type="checkbox" id="showcats" name="showcats">
+				<span class="slider"></span>
+			</label>
+		</div>
+	</section>
+	
+	<section>
+		<div>
 			<label data-i18n="prefs:body.label.theme">Theme</label>
 			
 			<ul>
