--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -11,6 +11,7 @@
 <body>
 	<header>
 		<time id="time"></time>
+		<button id="update" type="button" tabindex="-1" data-url=""><span id="update-version"></span> <span id="update-label"></span> &rarr;</button>
 	</header>
 	
 	<div id="frame">
