--- a/app-source/html/new-category.html
+++ b/app-source/html/new-category.html
@@ -17,13 +17,13 @@
 				<ul id="fields">
 					<li>
 						<label for="newcat" data-i18n="newcategory:body.label.new">Name</label>
-						<input type="text" name="newcat" placeholder="alphanumeric" required pattern="[a-zA-Zà-žÀ-Ž0-9#-\)\+-\.\^-` !;=@\[\]\{\}~]+" title="this field is required" value="" data-i18n="[placeholder]newcategory:body.input.placeholder; [title]newcategory:body.input.title">
+						<input type="text" name="newcat" placeholder="alphanumeric" required pattern="[a-zA-Zà-žÀ-Ž0-9#-\)\+-\.\^-` !;=@\[\]\{\}~]+" title="this field is required" value="" data-i18n="[placeholder]newcategory:body.input.placeholder; [title]newcategory:body.input.title" tabindex="1">
 					</li>
 				</ul>
 				
 				<footer>
-					<button id="cancel" type="button" data-i18n="newcategory:body.button.cancel">Cancel</button>
-					<button id="create" type="submit" data-i18n="newcategory:body.button.create">Create Category</button>
+					<button id="cancel" class="ui-button" type="button" data-i18n="newcategory:body.button.cancel" tabindex="3">Cancel</button>
+					<button id="create" class="ui-button" type="submit" data-i18n="newcategory:body.button.create" tabindex="2">Create Category</button>
 				</footer>
 			</form>
 		</div>
