--- a/app-source/html/prefs.html
+++ b/app-source/html/prefs.html
@@ -29,6 +29,16 @@
 				</select>
 			</div>
 		</div>
+		
+		<div>
+			<label for="ordercats" data-i18n="prefs:body.label.ordercats">Order categories by</label>
+			<div class="select-container">
+				<select id="ordercats" name="ordercats">
+					<option value="desc" data-i18n="prefs:body.option.desc">Descending</option>
+					<option value="asc" data-i18n="prefs:body.option.asc">Ascending</option>
+				</select>
+			</div>
+		</div>
 	</section>
 	
 	<section>
@@ -56,7 +66,6 @@
 	<section>
 		<div>
 			<label data-i18n="prefs:body.label.cursor">Cursor position</label>
-			
 			<ul>
 				<li>
 					<input type="radio" id="start" name="cursor" value="start">
@@ -68,8 +77,6 @@
 					<label for="end" data-i18n="prefs:body.label.end">end</label>
 				</li>
 			</ul>
-			
-			
 		</div>
 	</section>
 	
@@ -96,7 +103,6 @@
 	<section>
 		<div>
 			<label data-i18n="prefs:body.label.theme">Theme</label>
-			
 			<ul>
 				<li>
 					<input type="radio" id="os-theme" name="theme" value="default">
