--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -24,6 +24,9 @@
 			<textarea id="note" data-id="" tabindex="-1">
 			</textarea>
 			<button id="edit" title="Edit Note"></button>
+			<samp>
+				<span id="location"></span>
+			</samp>
 		</main>
 	</div>
 	
