--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -48,6 +48,8 @@
 			
 			<ul id="categories" class="categories">
 			</ul>
+			
+			<!--<input id="search" placeholder="search" tabindex="1">-->
 		</div>
 	</footer>
 	<script>
