--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -52,7 +52,7 @@
 		</div>
 		
 		<div class="search-field">
-			<input id="search" placeholder="search">
+			<input id="search" placeholder="search" tabindex="-1">
 			<button id="clear"></button>
 		</div>
 	</footer>
