--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -16,7 +16,12 @@
 	<div id="frame">
 		<aside>
 			<div id="divider"></div>
-			<ul id="sidebar"></ul>
+			
+			<div id="result"></div>
+			
+			<div class="inner">
+				<ul id="sidebar"></ul>
+			</div>
 		</aside>
 		
 		<main>
