--- a/app-source/html/prefs.html
+++ b/app-source/html/prefs.html
@@ -87,7 +87,7 @@
 				<input type="checkbox" id="stemming" name="stemming">
 				<span class="slider"></span>
 			</label>
-			<label for="stemming" data-i18n="prefs:body.label.stemming">Find similar terms, eg: searching, searched, search</label>
+			<label for="stemming" data-i18n="prefs:body.label.stemming">Find similar terms, eg: searching = searched = search</label>
 		</div>
 	</section>
 	
