--- a/app-source/html/new-category.html
+++ b/app-source/html/new-category.html
@@ -17,7 +17,7 @@
 				<ul id="fields">
 					<li>
 						<label for="newcat" data-i18n="newcategory:body.label.new">Name</label>
-						<input type="text" name="newcat" placeholder="alphanumeric" required pattern="[a-zA-Zà-žÀ-Ž0-9#-\)\+-\.\^-` !;=@\[\]\{\}~]+" title="this field is required" value="" data-i18n="[placeholder]newcategory:body.input.placeholder; [title]newcategory:body.input.title" tabindex="1">
+						<input type="text" name="newcat" placeholder="alphanumeric" required pattern="[a-zA-Zà-žÀ-Ž0-9#-\)\+-\.\^-` !;=@\[\]\{\}~]+" title="this field is required" value="" data-i18n="[placeholder]newcategory:body.input.placeholder; [title]newcategory:body.input.title" tabindex="1" autofocus>
 					</li>
 				</ul>
 				
