--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -2,17 +2,13 @@
 <html lang="">
 <head>
 	<meta charset="utf-8">
-	<title>&nbsp;</title>
+	<title></title>
 	<script>
 		require( '../js/theme.min' )
 	</script>
 	<link rel="stylesheet" type="text/css" href="../css/app.min.css" media="all">
 </head>
 <body>
-	<header>
-		<time id="time"></time>
-	</header>
-	
 	<div id="frame">
 		<aside>
 			<div id="divider"></div>
