number input type

--- a/app-source/html/about.html
+++ b/app-source/html/about.html
@@ -2,6 +2,7 @@
 <html lang="">
 <head>
 	<meta charset="utf-8">
+	<title>&nbsp;</title>
 	<script>
 		require( '../js/theme.min' )
 	</script>
@@ -18,7 +19,7 @@
 			<img src="../assets/icon/icon.png" width="128" height="128" alt="" />
 		</figure>
 		
-		<h1 id="productName"></h1>
+		<h1 id="productName">[name]</h1>
 		<p id="description" data-i18n="about:body.description">Access and edit your Nextcloud Notes on the Mac</p>
 		
 		<dl>
@@ -30,7 +31,7 @@
 			<dd id="license"></dd>
 		</dl>
 		
-		<button id="info" class="ui-button" role="button" data-i18n="about:body.button.info">more info</button>
+		<button id="info" class="ui-button" data-i18n="about:body.button.info">more info</button>
 	</main>
 	
 	<script>
