--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -2,7 +2,7 @@
 <html lang="">
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>&nbsp;</title>
 	<script>
 		require( '../js/theme.min' )
 	</script>
