--- a/app-source/html/insert-hyperlink.html
+++ b/app-source/html/insert-hyperlink.html
@@ -17,7 +17,7 @@
 				<ul id="fields">
 					<li>
 						<label for="url" data-i18n="inserthyperlink:body.label.url">Hyperlink</label>
-						<input type="url" name="url" placeholder="https://example.com" required title="this field is required" value="" data-i18n="[placeholder]inserthyperlink:body.input.placeholder; [title]inserthyperlink:body.input.title" tabindex="1">
+						<input type="url" id="url" name="url" placeholder="https://example.com" required title="this field is required" value="" data-i18n="[placeholder]inserthyperlink:body.input.placeholder; [title]inserthyperlink:body.input.title" tabindex="1" autofocus>
 					</li>
 				</ul>
 				
