--- a/app-source/html/insert-table.html
+++ b/app-source/html/insert-table.html
@@ -15,7 +15,7 @@
 		<div class="scroll">
 			<div class="columns">
 				<div>
-					<canvas id="table" width="120px" height="120px"></canvas>
+					<canvas id="table" width="120" height="120"></canvas>
 				</div>
 				
 				<div>
@@ -23,7 +23,7 @@
 						<ul id="fields">
 							<li>
 								<label for="columns" data-i18n="inserttable:body.label.columns">Columns</label>
-								<input type="number" id="columns" name="columns" title="this field is required" value="4" min="1" max="50" data-i18n="[title]inserttable:body.input.title" tabindex="1">
+								<input type="number" id="columns" name="columns" title="this field is required" value="4" min="1" max="50" data-i18n="[title]inserttable:body.input.title" tabindex="1" autofocus>
 							</li>
 							<li>
 								<label for="rows" data-i18n="inserttable:body.label.rows">Rows</label>
