--- a/app-source/html/prefs.html
+++ b/app-source/html/prefs.html
@@ -115,7 +115,7 @@
 				<li>
 					<label class="radio">
 						<input type="radio" id="dark" name="theme" value="dark">
-						<span for="dark" data-i18n="prefs:body.option.dark">dark</span>
+						<span data-i18n="prefs:body.option.dark">dark</span>
 					</label>
 				</li>
 			</ul>
