--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -11,6 +11,8 @@
 <body>
 	<div id="frame">
 		<aside>
+			<div class="draggable-header toolbar"></div>
+			
 			<div id="divider"></div>
 			
 			<div id="result"></div>
@@ -31,6 +33,8 @@
 	</div>
 	
 	<footer>
+		<div class="draggable-header"></div>
+		
 		<div class="fixed">
 			<span id="cat-title"></span>
 			
