new / delete title bar buttons

--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -11,7 +11,10 @@
 <body>
 	<div id="frame">
 		<aside>
-			<div class="draggable-header toolbar"></div>
+			<div class="draggable-header toolbar">
+				<button id="new-button" title="New Note (Cmd-N)"><i></i></button>
+				<button id="delete-button" title="Delete Selected Note (Cmd-D)"><i></i></button>
+			</div>
 			
 			<div id="divider"></div>
 			
