i18n title bar buttons

--- a/app-source/html/app.html
+++ b/app-source/html/app.html
@@ -12,8 +12,8 @@
 	<div id="frame">
 		<aside>
 			<div class="draggable-header toolbar">
-				<button id="new-button" title="New Note (Cmd-N)"><i></i></button>
-				<button id="delete-button" title="Delete Selected Note (Cmd-D)"><i></i></button>
+				<button id="new-button" title=""><i></i></button>
+				<button id="delete-button" title=""><i></i></button>
 			</div>
 			
 			<div id="divider"></div>
